# zk-mooc-halo2

benchmarking/: Cargo.toml
benchmarking/src/: lib.rs
ripemd160-circuit/: Cargo.toml  README.md
ripemd160-circuit/src/: constants.rs  lib.rs  native.rs  ref_impl.rs  table16.rs
ripemd160-circuit/src/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
ripemd160-circuit/src/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
ripemd160-circuit/src/table16/message_schedule/: schedule_util.rs
