[package]
name = "ripemd160-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers-core = "^1.0.0"
halo2_proofs = { git = "https://github.com/halo2-ce/halo2.git",  features = ["dev-graph"]  }
lazy_static = "1.4.0"

[features]
default = ["test"]
test = []

[dev-dependencies]
plotters = "0.3.4"
rand = "0.9.0"
